tests/characterization/snapshots/command_help__cloud_local_uninstall.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local uninstall <cloud|frontend|admin> <version>
  oqtopus cloud-local uninstall <cloud|frontend|admin> branch:<branch>
--- stderr ---
--- end ---
