tests/characterization/snapshots/command_help__cloud_local_update.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local update <cloud|frontend|admin>
--- stderr ---
--- end ---
