tests/characterization/snapshots/command_help__cloud_local_versions.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local versions <cloud|frontend|admin>
--- stderr ---
--- end ---
