tests/characterization/snapshots/command_help__completion.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus completion <bash|zsh|fish>
--- stderr ---
--- end ---
