tests/characterization/snapshots/command_help__manager.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager <command> [args]

Commands:
  install    Install a manager release.
  uninstall  Remove an installed release.
  update     Install the latest release and update the environment binding.
  versions   List available manager versions.
  start      Start the manager service.
  stop       Stop the manager service.
  restart    Restart the manager service.
  status     Show process status.
  info       Show manager environment information.
  help       Show this help.
--- stderr ---
--- end ---
