tests/characterization/snapshots/command_help__manager_install.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager install [version|branch:<branch>]
--- stderr ---
--- end ---
