tests/characterization/snapshots/command_help__manager_restart.snap
---
source: tests/characterization/help.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager restart
--- stderr ---
--- end ---
